--- a/functions/package.json
+++ b/functions/package.json
@@ -11,16 +11,26 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@biconomy/account": "^3.1.2",
+    "@biconomy/bundler": "^3.1.2",
+    "@biconomy/common": "^3.1.2",
+    "@biconomy/core-types": "^3.1.2",
+    "@biconomy/modules": "^3.1.2",
+    "@biconomy/paymaster": "^3.1.2",
     "@toruslabs/constants": "13.0.0",
     "@toruslabs/fetch-node-details": "^13.0.0",
     "@toruslabs/torus.js": "^11.0.0",
+    "@web3auth/ethereum-provider": "^7.2.1",
+    "@web3auth/single-factor-auth": "^7.2.2",
+    "axios": "^1.6.5",
+    "ethers": "^5.7.0",
+
     "firebase-admin": "^11.4.0",
-    "firebase-functions": "^4.1.1",
-    "typescript": "^4.9.4"
+    "firebase-functions": "^4.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.47.0",
@@ -30,7 +40,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "firebase-functions-test": "^3.0.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
